; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_utilcmd.c_get_collation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_utilcmd.c_get_collation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@NIL = common dso_local global i32* null, align 8
@COLLOID = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"cache lookup failed for collation %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64, i64)* @get_collation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_collation(i64 %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @OidIsValid(i64 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %2
  %15 = load i32*, i32** @NIL, align 8
  store i32* %15, i32** %3, align 8
  br label %56

16:                                               ; preds = %2
  %17 = load i64, i64* %4, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i64 @get_typcollation(i64 %18)
  %20 = icmp eq i64 %17, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %16
  %22 = load i32*, i32** @NIL, align 8
  store i32* %22, i32** %3, align 8
  br label %56

23:                                               ; preds = %16
  %24 = load i32, i32* @COLLOID, align 4
  %25 = load i64, i64* %4, align 8
  %26 = call i32 @ObjectIdGetDatum(i64 %25)
  %27 = call i32 @SearchSysCache1(i32 %24, i32 %26)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @HeapTupleIsValid(i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %35, label %31

31:                                               ; preds = %23
  %32 = load i32, i32* @ERROR, align 4
  %33 = load i64, i64* %4, align 8
  %34 = call i32 @elog(i32 %32, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i64 %33)
  br label %35

35:                                               ; preds = %31, %23
  %36 = load i32, i32* %7, align 4
  %37 = call i64 @GETSTRUCT(i32 %36)
  %38 = inttoptr i64 %37 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %38, %struct.TYPE_2__** %8, align 8
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = call i8* @get_namespace_name(i32 %41)
  store i8* %42, i8** %9, align 8
  %43 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @NameStr(i32 %45)
  %47 = call i8* @pstrdup(i32 %46)
  store i8* %47, i8** %10, align 8
  %48 = load i8*, i8** %9, align 8
  %49 = call i32 @makeString(i8* %48)
  %50 = load i8*, i8** %10, align 8
  %51 = call i32 @makeString(i8* %50)
  %52 = call i32* @list_make2(i32 %49, i32 %51)
  store i32* %52, i32** %6, align 8
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @ReleaseSysCache(i32 %53)
  %55 = load i32*, i32** %6, align 8
  store i32* %55, i32** %3, align 8
  br label %56

56:                                               ; preds = %35, %21, %14
  %57 = load i32*, i32** %3, align 8
  ret i32* %57
}

declare dso_local i32 @OidIsValid(i64) #1

declare dso_local i64 @get_typcollation(i64) #1

declare dso_local i32 @SearchSysCache1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i64) #1

declare dso_local i32 @HeapTupleIsValid(i32) #1

declare dso_local i32 @elog(i32, i8*, i64) #1

declare dso_local i64 @GETSTRUCT(i32) #1

declare dso_local i8* @get_namespace_name(i32) #1

declare dso_local i8* @pstrdup(i32) #1

declare dso_local i32 @NameStr(i32) #1

declare dso_local i32* @list_make2(i32, i32) #1

declare dso_local i32 @makeString(i8*) #1

declare dso_local i32 @ReleaseSysCache(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
